change log level

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Output pattern : date [thread] priority category - message
-log4j.rootLogger=INFO, stdout,Vlogfile
+log4j.rootLogger=debug, stdout,Vlogfile
 
 # stander 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
