--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -30,7 +30,7 @@ log4j.logger.org.springframework=INFO
 log4j.logger.org.springframework.orm=INFO
 log4j.logger.org.springframework.transaction=INFO
 log4j.logger.org.springframework.web.servlet.mvc.annotation=WARN
-
+log4j.logger.org.springframework.web=debug
 
 
 log4j.logger.org.jasig.cas.client=WARN
