--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 ##database=MySql
-webapp.jdbc.driverClassName=com.mysql.jdbc.Driver
+#webapp.jdbc.driverClassName=com.mysql.jdbc.Driver
+webapp.jdbc.driverClassName=net.sf.log4jdbc.DriverSpy
 
 #\u5e7f\u7814
 
@@ -12,7 +13,8 @@ webapp.jdbc.driverClassName=com.mysql.jdbc.Driver
 #localhost
 
 
-webapp.jdbc.url=jdbc:mysql://localhost:3306/kangbao
+#webapp.jdbc.url=jdbc:mysql://localhost:3306/kangbao
+webapp.jdbc.url=jdbc:log4jdbc:mysql://localhost:3306/kangbao
 webapp.jdbc.username=root
 webapp.jdbc.password=
 
