--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 		</listener-class>  
 	</listener>  
 	
-	<!-- logback配置    mybaits要用log4j，否则打印不了sql
+	<!-- logback配置    -->
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
 		<param-value>classpath:logback.xml</param-value> 
@@ -24,7 +24,7 @@
 	<listener>
 		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
 	</listener>
-	-->
+	
 	
 	<!-- 字符集 过滤器 -->
 	<filter>
