--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,11 +5,6 @@ webapp.jdbc.driverClassName=net.sf.log4jdbc.DriverSpy
 #\u5e7f\u7814
 
 
-#webapp.jdbc.url=jdbc:mysql://10.45.47.52:3306/platform_paas_cloudify
-#webapp.jdbc.username=platform
-#webapp.jdbc.password=platform
-
-
 #localhost
 
 
@@ -17,6 +12,10 @@ webapp.jdbc.driverClassName=net.sf.log4jdbc.DriverSpy
 webapp.jdbc.url=jdbc:log4jdbc:mysql://localhost:3306/kangbao
 webapp.jdbc.username=root
 webapp.jdbc.password=
+
+#webapp.jdbc.url=jdbc:log4jdbc:mysql://10.247.59.125:23306/combao
+#webapp.jdbc.username=combao
+#webapp.jdbc.password=I#Ui8+35
 
 
 ##\u8fde\u63a5\u6c60\u542f\u52a8\u65f6\u521b\u5efa\u7684\u521d\u59cb\u5316\u8fde\u63a5\u6570\u91cf
